# django-login-app

./: .gitignore  .vercelignore  README.md  build_vercel.py  pyproject.toml  requirements.txt
.cursor/rules/: agent-test-reporting.mdc
.cursor/skills/qa-lead-by-cursor-1/: SKILL.md  app-context.md  strategy-template.md
accounts/: admin.py  api_views.py  auth.py  models.py  services.py  urls.py  views.py
accounts/management/commands/: sync_agent_bug_report.py
accounts/migrations/: 0001_initial.py  0002_agentbugreport.py  0003_remove_agent_bug_report_record.py  0004_testrunreport.py
accounts/templates/accounts/: attempts.html  login.html  register.html
config/: settings.py  urls.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent-bugs/: page.tsx
frontend/app/attempts/: page.tsx
frontend/app/findings/: findings.ts  page.tsx
frontend/app/register/: page.tsx
frontend/app/testing-dashboard/: page.tsx
frontend/app/testing-reports/: page.tsx
frontend/lib/: api.ts
frontend/scripts/: build-findings-snapshot.mjs
qa/: README.md  SKILL.md  findings.md
qa/QA-UI-PlayWright-1/: package-lock.json  package.json
qa/QA-UI-PlayWright-1/LeadClaud/: SKILL.md
qa/QA-UI-PlayWright-1/tests/: smoke.spec.js
qa/agents/: C-API.json  C-API.md  C-UI.json  C-UI.md  C.json  C.md  README.md  bug-report.md
qa/specialists/: README.md
qa/specialists/api-tester/: SKILL.md  findings.md
qa/specialists/data-tester/: SKILL.md  findings.md
qa/specialists/security-tester/: SKILL.md  (+1 more)
(+6 files in other folders)
