[project]
name = "django-login-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5",
    "dj-database-url>=2.1,<3",
    "psycopg2-binary>=2.9,<3",
    "whitenoise>=6.6,<7",
]

[tool.vercel]
entrypoint = "config.wsgi:application"

[tool.vercel.scripts]
build = "python build_vercel.py"
